# toSketch

./: .gitignore  README.md  metadata.txt  package.xml
freecad/Face2Sketch/: F2SCommands.py  F2SObjects.py  init_gui.py  toSObjects.py
freecad/toSketch/: __init__.py  addCoincidentConstraints.py  addHorizontalConstraints.py  addParallelConstraints.py  addVerticalConstraints.py  constraints.py  correction.py  groupByDirection,py  init_gui.py  init_gui.save  interFCBSpline.py  interNotes.txt  interpolate.py  symmetricConstraints.py  toSCommands.py  toSCommands.save  toSObjects.py  toSharedFunc.py  vect2np3d.txt  vectors2np2d.py
freecad/toSketch/DeveloperNotes/newCode/: __init__.py  geomutils.py  init_gui.py  modified_geoutils.py  toCurveGuided.py  toLine.py  tocurve_auto.py
freecad/toSketch/DeveloperNotes/newCode/icons/: logging_utils.py  toSketchPreferences.py  updated_init_gui.py
freecad/toSketch/commands/: add_bbox_sketch.py  b_spline_to_arc.py  constraints_group.py  remove_outer_box.py  section_to_sketch.py  toLine.py  to_curve_fit.py  to_curve_guided.py  to_line.py  to_line_curve_fit.py  to_macro.py  to_plane.py  to_reset_origin.py  to_scale.py  to_shape_info.py  to_sketch.py  vector_utils.py
